--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "http": "0.0.0",
+    "moment": "^2.19.1",
+    "querystring": "^0.2.0",
     "smartflanders-data-query": "^2.0.0",
     "url": "^0.11.0"
   }
